--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
                         <div class="col-2 large-screen-only"></div>
                         <div id="main" class="col-8 fill-on-large" style="border-radius: 10px; background-color: rgba(194, 194, 194, 0.637); min-height: 500px;">
                             <br>
-                            <h3 id="title" class="text-center"> Beginning scene of the Beginning that has beginning stuff in it. </h3>
+                            <h3 id="title" class="text-center"> <%= sObject.Title %> </h3>
                             <img id="imageShown" src="<%= sObject.Image %>" style="max-width: 100%; padding: 5px 5px 5px 5px;">
                             <br><br>
                             <p id="dialogText" class="text-center"> <%= sObject.Prompt %> </p>
