Adding score tracker to allow consequences from answers

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -73,6 +73,11 @@
             <input type="text" id="SituationId" name="SituationId"><br><br>
             <label for="LeadsTo">LeadsTo:</label>
             <input type="text" id="LeadsTo" name="LeadsTo"><br><br>
+            <label for="Points">Points:</label>
+            <input type="text" id="Points" name="Points"><br><br>
+            <label for="Cost">Cost:</label>
+            <input type="text" id="Cost" name="Cost"><br><br>
+            
             <input type="submit" value="Submit">        
         </form>
             <br>
